# PyomoTools

./: .gitignore  README.md  pyproject.toml  setup.py  test_higher_dim_plot.py
Derivations/: DoubleSidedBigM.ipynb  DoubleSidedBigM_RandomTest.py
Examples/: DoubleSidedBigM.py  InfeasibilityReport.py  LoadIndexedSet.py  MaxOperator.py  PWL.py
Examples/Environ/: DoubleSidedBigM.py  InfeasibilityReport.py  LoadIndexedSet.py  MaxOperator.py  PWL.py
Examples/Kernel/: DoubleSidedBigM.py  DoubleSidedBigMSolution.yaml  InfeasibilityReport.py  InfeasibilityReport.txt  MaxOperator.py  MaxOperatorSolution.yaml
PyomoTools/: AssertPyomoModelsEqual.py  FindLeastInfeasibleSolution.py  GenerateExpressionString.py  InfeasibilityReport.py  Load2DIndexedSet.py  MergeModels.py  MergeableModel.py  Polytope.py  Solvers.py  __init__.py
PyomoTools/Formulations/: DNN.py
PyomoTools/IO/: LoadModelSolutionFromDF.py  LoadModelSolutionFromExcel.py  ModelToDF.py  ModelToExcel.py  VarToDF.py  __init__.py
PyomoTools/VectorRepresentation/: VectorRepresentation.py
PyomoTools/base/: DetermineExpressionConnectors.py  GenerateExpressionString.py  GenerateExpressionVisualization.py  ParseNumericExpressionString.py  ParseNumericExpressionString_OLD.py  Solvers.py  __init__.py
PyomoTools/environ/: AssertPyomoModelsEqual.py  FindLeastInfeasibleSolution.py  GenerateExpressionString.py  InfeasibilityReport.py  LoadIndexedSet.py  Polytope.py  __init__.py
PyomoTools/kernel/: AssertPyomoModelsEqual.py  ConstraintReport.py  FindLeastInfeasibleSolution.py  InfeasibilityReport.py  UnboundedReport.py  (+5 more)
(+116 files in other folders)
