# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyomoTools"
version = "0.3.0"
description = "A collection of tools to aid in formulating and working with Pyomo models."
authors = [
  { name="Nathan Barrett", email="nb5786@pricneton.edu" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
  "numpy>=1.21.0",
  "pyomo>=6.0",
  "scipy>=1.7.0",
  "pandas>=2.3.0",
  "pwlf>=2.5.1",
  "matplotlib>=3.10.3",
  "pytest>=8.4.0",
  "XlsxWriter>=3.2.3",
  "openpyxl>=3.1.5",
  "pyyaml>=6.0.2"
]

[tool.setuptools.packages.find]
include = ["PyomoTools*"]
where = ["."]